# ryuji-rust

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
example/templates/: post.html
example/templates/components/: bottom-header.html  thanks.html
src/: lib.rs  ryuji.rs
